feat: :sparkles: header

--- a/assets/css/input_sass.scss
+++ b/assets/css/input_sass.scss
@@ -22,6 +22,12 @@
 /********************/
 
 /****** HEADER ******/
+header {
+    background: url("../../img/background.jpg") no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+}
 
 /******  BOOKS ******/
 
